--- a/editor/package.json
+++ b/editor/package.json
@@ -14,9 +14,12 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
     "aws-northstar": "latest",
+    "lodash": "^4.17.21",
+    "mapbox-gl": "^2.9.1",
     "plotly.js": "^2.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^7.0.16",
     "react-pivottable": "^0.11.0",
     "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.3.0",
@@ -50,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.182"
   }
 }
